# asciidoc-parser

./: .gitignore  .gitmodules  .taplo.toml  CHANGELOG.adoc  CHANGELOG.md  CONTRIBUTING.adoc  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTICE.adoc  README.adoc  README.md  codecov.yml  deny.toml  initial-assessment-issue.adoc  local-antora-playbook.yml  release-plz.toml
parser/: Cargo.toml
parser/benches/: element_attributes.rs  inline_macro.rs  section_with_two_blocks.rs  simple_parse.rs
parser/src/: lib.rs  strings.rs  warnings.rs
parser/src/attributes/: attrlist.rs  element_attribute.rs  mod.rs
parser/src/blocks/: block.rs  break.rs  compound_delimited.rs  context.rs  is_block.rs  list.rs  list_item.rs  list_item_marker.rs  macro.rs  media.rs  metadata.rs  mod.rs  parse_utils.rs  preamble.rs  raw_delimited.rs  section.rs  simple.rs
parser/src/blocks/tests/: break.rs  compound_delimited.rs  media.rs  mod.rs  raw_delimited.rs  section.rs  simple.rs
parser/src/content/: content.rs  macros.rs  mod.rs  passthroughs.rs  substitution_group.rs  substitution_step.rs
parser/src/document/: attribute.rs  attribute_value.rs  author.rs  author_line.rs  catalog.rs  document.rs  header.rs  mod.rs  revision_line.rs
parser/src/inlines/: inline.rs  macro.rs  mod.rs
parser/src/internal/: debug.rs  mod.rs  regex.rs
parser/src/parser/: attribute_value.rs  built_in_attrs.rs  include_file_handler.rs  inline_substitution_renderer.rs  mod.rs  parser.rs  path_resolver.rs  preprocessor.rs  source_map.rs
parser/src/span/: content.rs  discard.rs  line.rs  matched_item.rs  mod.rs  primitives.rs  slice.rs  split.rs  take.rs  trim.rs
parser/src/span/content/: macros.rs  mod.rs  passthroughs.rs  substitution_group.rs  substitution_step.rs
parser/src/tests/: mod.rs  prelude.rs  strings.rs  warnings.rs
parser/src/tests/asciidoc_lang/: mod.rs
parser/src/tests/asciidoc_lang/attributes/: assignment_precedence.rs  attribute_entries.rs  attribute_entry_substitutions.rs  boolean_attributes.rs  built_in_attributes.rs  custom_attributes.rs  document_attributes.rs  element_attributes.rs  id.rs  inline_attribute_entries.rs  mod.rs  names_and_values.rs  options.rs  positional_and_named_attributes.rs  reference_attributes.rs  role.rs  unset_attributes.rs  wrap_values.rs
parser/src/tests/asciidoc_lang/blocks/: add_title.rs  assign_id.rs  breaks.rs  build_basic_block.rs  delimited.rs  discrete_headings.rs  hard_line_breaks.rs  index.rs  mod.rs  paragraph_alignment.rs  paragraphs.rs  preamble_and_lead.rs  troubleshoot_blocks.rs
parser/src/tests/asciidoc_lang/directives/: include_multiple_times_in_same_document.rs  include_uri.rs  mod.rs
parser/src/tests/asciidoc_lang/document/: author_attribute_entries.rs  author_information.rs  author_line.rs  compound_author_name.rs  doctype.rs  header.rs  header_ref.rs  metadata.rs  mod.rs  multiple_authors.rs  reference_author_attributes.rs  reference_revision_attributes.rs  revision_attribute_entries.rs  revision_information.rs  revision_line.rs  subtitle.rs  title.rs  version_label.rs
parser/src/tests/asciidoc_lang/macros/: autolinks.rs  complex_urls.rs  icon_macro.rs  icons.rs  image_link.rs  image_position.rs  image_size.rs  image_url.rs  images.rs  images_directory.rs  link_macro.rs  link_macro_ref.rs  mod.rs  (+4 more)
parser/src/tests/asciidoctor_rb/: lists_test.rs  mod.rs  paragraphs_test.rs  substitutions_test.rs
parser/src/tests/assert_dom/: css.rs  mod.rs  virtual_dom.rs  xpath.rs
parser/src/tests/attributes/: attrlist.rs  element_attribute.rs
parser/src/tests/blocks/: compound_delimited.rs  content_model.rs  macro.rs  media.rs  media_type.rs  mod.rs  raw_delimited.rs  section.rs  simple.rs
parser/src/tests/content/: content.rs  macros.rs  mod.rs  passthroughs.rs  substitution_group.rs  substitution_step.rs
parser/src/tests/document/: attribute.rs  author_line.rs  document.rs  header.rs  interpreted_value.rs  mod.rs  revision_line.rs
parser/src/tests/fixtures/: content.rs  inline_file_handler.rs  mod.rs  span.rs  warnings.rs
parser/src/tests/inlines/: inline.rs  mod.rs
parser/src/tests/internal/: regex.rs
parser/src/tests/parser/: mod.rs  parser.rs  path_resolver.rs  preprocessor.rs  source_map.rs  warning_type.rs
parser/src/tests/span/: content.rs  discard.rs  line.rs  matched_item.rs  mod.rs  parse_result.rs  primitives.rs  split.rs  take.rs  trim.rs
(+382 files in other folders)
