[package]
name = "asciidoc-parser"
version = "0.1.0"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
authors = ["Eric Scouten <git@scouten.me>"]
keywords = ["asciidoc", "parser"]
repository = "https://github.com/scouten/asciidoc-parser"
rust-version = "1.72.0"

[dependencies]
nom = "7.1"
nom-span = "0.1.1"
thiserror = "1.0.50"

[dev-dependencies]
codspeed-criterion-compat = "2.3.3"
criterion = "0.5.1"
pretty_assertions_sorted = "1.2.3"

[[bench]]
name = "simple_parse"
harness = false

[package.metadata.cargo-udeps.ignore]
development = ["criterion"]
