[package]
name = "asciidoc-parser"
version = "0.1.0"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
authors = ["Eric Scouten <git@scouten.me>"]
keywords = ["asciidoc", "parser"]
repository = "https://github.com/scouten/asciidoc-parser"
rust-version = "1.74.0"

[dependencies]
bytecount = "0.6.7"
memchr = "2.6.4"
thiserror = "1.0.63"

[dev-dependencies]
codspeed-criterion-compat = "2.3.3"
criterion = "0.5.1"
pretty_assertions_sorted = "1.2.3"

[[bench]]
name = "inline_macro"
harness = false

[[bench]]
name = "section_with_two_blocks"
harness = false

[[bench]]
name = "simple_parse"
harness = false

[package.metadata.cargo-udeps.ignore]
development = ["criterion"]
