[package]
authors = ["Eric Scouten <git@scouten.me>"]
categories = ["parser-implementations"]
description = "Parser for AsciiDoc format"
documentation = "https://docs.rs/asciidoc-parser"
edition = "2024"
keywords = ["asciidoc", "parser"]
license = "MIT OR Apache-2.0"
name = "asciidoc-parser"
readme = "../README.md"
repository = "https://github.com/scouten/asciidoc-parser"
rust-version = "1.88.0"
version = "0.14.2"

[dependencies]
bytecount = "0.6.7"
memchr = "2.6.4"
percent-encoding = "2.3.2"
regex = "1.11.1"
self_cell = "1.2.0"
thiserror = "2.0.1"

[dev-dependencies]
codspeed-criterion-compat = "4.0.2"
criterion = "0.8.0"
pretty_assertions_sorted = "1.2.3"

[[bench]]
harness = false
name = "element_attributes"

[[bench]]
harness = false
name = "inline_macro"

[[bench]]
harness = false
name = "section_with_two_blocks"

[[bench]]
harness = false
name = "simple_parse"

[package.metadata.cargo-udeps.ignore]
development = ["criterion"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(test)'] }
